# portfolio-vico

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml  next.config.js  package-lock.json  package.json
src/: main.rs
src/static/css/: input.css  output.css
src/static/js/: tailwind.config.js
src/templates/: base.html
src/templates/common/: nav.html
src/templates/pages/: home.html
src/templates/pages/design_system/: buttons.html  colours.html  icons.html  typography.html
static/css/: input.css  output.css
static/img/: background.png:Zone.Identifier
static/img/hoyts/: cartelera-1.png:Zone.Identifier
static/img/portfolio/: cartelera-1.png:Zone.Identifier
static/img/sasboss/: cartelera-1.png:Zone.Identifier
static/js/: tailwind.config.js
templates/: base.html
templates/common/: nav.html
templates/pages/: about.html  design_system.html  home.html  under_construction.html
templates/pages/design_system/: buttons.html  colours.html  icons.html  typography.html
templates/pages/work/: list.html
